--- a/css/style.css
+++ b/css/style.css
@@ -1,167 +1,348 @@
 /****** General ***********/
+
 * {
-    font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
 :root {
-    --main-color: #0065FC;
-    --main-bg-color: #F2F2F2;
-    --filter-bg-color: #DEEBFF;
+  --main-color: #0065fc;
+  --filter-bg-color: #deebff;
+  --border-color: #d9d9d9;
+  --main-bg-color: #f2f2f2;
+  --search-txt-color: #ffffff;
 }
 
 .fa-solid {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 body {
-    display: flex;
-    justify-content: center;
-}
-
-.main-container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0 50px;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .section-title {
-    margin: 0;
-    font-size: 22px;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 25.83px;
+  text-align: left;
 }
 
 .card {
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  background-color: white;
+  border-radius: 20px;
+  padding: 5px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
 .card img {
-    object-fit: cover;
+  object-fit: cover;
 }
 
 .card-title {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .euro {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .neutral-star {
-    color: var(--main-bg-color)
+  color: var(--main-bg-color);
 }
+/****** End General ***********/
+/*******start style NavBar Top*******/
+header {
+  width: 100%;
+  max-width: 1440px;
+  height: 79px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.logoHeaderContainer {
+  height: 100%;
+  width: 161.09px;
+  padding: 30px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.logoHeaderContainer img {
+  width: 61.09px;
+  height: 19px;
+}
+nav {
+  width: 344px;
+  height: 35px;
+  padding: 0px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 68px;
+}
+.linkHeaderContainer {
+  width: 244px;
+  height: 100%;
+  gap: 68px;
+  display: flex;
+}
+.linkHeader {
+  width: 113px;
+  height: 35px;
+  border-top: transparent solid 2px;
+  transition: all 0.3s ease-in-out;
+  align-content: flex-end;
+  cursor: pointer;
+}
+
+.linkHeader:hover {
+  border-top: var(--main-color) solid 2px;
+  color: var(--main-color);
+}
+.linkHeader a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18.78px;
+  text-align: center;
+}
+/*******End style NavBar Top*******/
+
+/******* Start Main ***********/
+main {
+  width: 100%;
+  max-width: 1440px;
+  height: 100%;
+  padding: 0px 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+/*FirstSection*/
+.MainFirstSection {
+  max-width: 1340px;
+  height: 281px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.titleContainer {
+  width: 100%;
+  height: 53px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.section-subtitle {
+  font-size: 16px;
+}
+.searchContainer {
+  width: 377px;
+  height: 49px;
+  border-radius: 15px;
+  border: var(--main-bg-color) solid 1px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.searchContainer :first-child {
+  width: 50px;
+  height: 100%;
+  background-color: var(--main-bg-color);
+  border-radius: 15px 0px 0px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.searchContainer i {
+  font-size: 18px;
+  color: black;
+}
+.searchInput {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21.13px;
+  text-align: center;
+  outline: none;
+}
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
+}
+.searchButton {
+  width: 132px;
+  height: 100%;
+  color: var(--search-txt-color);
+  background-color: var(--main-color);
+  border-radius: 0px 15px 15px 0px;
+  border: var(--main-color) solid 1px;
+  padding: 15px 16px;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.13px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.searchButtonMobile {
+  display: none;
+}
+
+.filtersContainer {
+  width: 758px;
+  height: 50px;
+  display: flex;
+  gap: 15px;
+}
+.filtersTitle {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21.13px;
+  align-self: center;
+}
+.filterButton {
+  border-radius: 25px;
+  border: 2px solid var(--border-color);
+  padding: 4px 18px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  background-color: transparent;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 19.96px;
+}
+
+.filterButton:hover {
+  background-color: var(--filter-bg-color);
+}
+.filterButton i {
+  font-size: 22px;
+  line-height: 22px;
+}
+/*FirstSection*/
+/******* End Main ***********/
 
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  height: 614px;
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 
 .hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
-    box-sizing: border-box;
+  background-color: var(--main-bg-color);
+  border-radius: 20px;
+  padding: 30px;
 }
 
 /****** Hebergements ***********/
 .hebergements {
-    width: 65%;
+  width: 65%;
 }
 
 /****** Populaires ***********/
 .populaires {
-    width: 32%;
+  width: 32%;
 }
 
 .populaires-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .populaires-cards .card {
-    display: flex;
-    margin-top: 33px;
+  display: flex;
+  margin-top: 33px;
 }
 
 .populaires-cards img {
-    width: 33%;
-    height: 136px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+  width: 33%;
+  height: 136px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .populaires-cards .card-content {
-    width: 67%;
-    padding-left: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
+  width: 67%;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .populaires-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+  margin-top: 10px;
+  margin-bottom: 4px;
 }
 
 .populaires-cards .card-subtitle {
-    margin: 0;
 }
 
 .populaires-cards .card-rating {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
-
-
-
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
-    .hebergements-and-populaires {
-        flex-direction: column;
-    }
+  .hebergements-and-populaires {
+    flex-direction: column;
+  }
 
-    .hebergements {
-        width: 100%;
-    }
+  .hebergements {
+    width: 100%;
+  }
 
-    .populaires {
-        width: 100%;
-        margin-top: 50px;
-    }
+  .populaires {
+    width: 100%;
+    margin-top: 50px;
+  }
 
-    .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
+  .populaires-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-    .populaires-cards a {
-        width: 30%;
-    }
+  .populaires-cards a {
+    width: 30%;
+  }
 
-    .populaires-cards .card-title {
-        font-size: 14px;
-    }
+  .populaires-cards .card-title {
+    font-size: 14px;
+  }
 
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
-    }
+  .populaires-cards .card-subtitle {
+    font-size: 13px;
+  }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+  /* ... */
 }
