--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,25 @@
   --white: #ffffff;
 }
 
+/* Style de scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #929496;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6e7072;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .fa-solid {
   color: var(--main-color);
 }
@@ -38,17 +57,6 @@ a {
   font-weight: 700;
   line-height: 25.83px;
   text-align: left;
-}
-
-.card {
-  background-color: var(--white);
-  border-radius: 20px;
-  padding: 5px;
-  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
-
-.card img {
-  object-fit: cover;
 }
 
 .card-title {
@@ -195,7 +203,8 @@ main {
 input[type="search"]::-webkit-search-cancel-button {
   display: none;
 }
-.searchButton {
+.searchButton,
+.searchButtonMobile {
   width: 132px;
   height: 100%;
   color: var(--white);
@@ -273,8 +282,6 @@ input[type="search"]::-webkit-search-cancel-button {
   align-items: center;
 }
 
-/*  MainFirstSection*/
-
 /****** MainSecondSection Hebergements And Populaires ***********/
 .MainSecondSection {
   width: 100%;
@@ -293,28 +300,35 @@ input[type="search"]::-webkit-search-cancel-button {
 /****** Hebergements ***********/
 .hebergements {
   width: 871px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.hebergementsCardsContainer {
+  width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
   gap: 30px;
 }
-.hebergementsCardsContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
+
+.hebergementsCardsContainer a {
+  flex: 1 1 calc((100% - 60px) / 3);
+  min-width: 150px;
+  max-width: 250.33px;
 }
-.hebergementsCardsRow {
-  display: flex;
-  gap: 30px;
-}
-.hebergementsCardsRow a {
-  width: 100%;
-}
+
 .hebergementsOneCard {
-  width: 250.33px;
-  height: 207.25px;
+  width: 100%;
+  height: 100%;
   border-radius: 20px;
   padding: 0px 0px 15px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   gap: 4px;
   box-shadow: 0px 3px 15px 0px #0000001a;
   background-color: var(--white);
@@ -338,11 +352,11 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 .cardContent {
   width: 100%;
-  height: 64.25px;
+  height: 100%;
   padding: 0px 15px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 8px;
 }
 .cardTitle {
@@ -362,7 +376,10 @@ input[type="search"]::-webkit-search-cancel-button {
 /****** Populaires ***********/
 .populaires {
   width: 429px;
-  height: 100%;
+  max-width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .populairesTitle {
@@ -370,40 +387,50 @@ input[type="search"]::-webkit-search-cancel-button {
   justify-content: space-between;
   align-items: center;
 }
-
-.populairesCards .card {
+.populairesCards {
   display: flex;
-  margin-top: 33px;
+  flex-direction: column;
+  gap: 30px;
+}
+.populairesCards a {
+  width: 369px;
+  max-width: 100%;
+  height: 146px;
+  transition: all 0.3s ease;
+}
+.populairesCards a:hover {
+  transform: translate(0px, -4px);
+}
+.populairesCards .card {
+  height: 100%;
+  display: flex;
+  background-color: var(--white);
+  border-radius: 20px;
+  box-shadow: 0px 3px 15px 0px #0000001a;
 }
 
 .populairesCards img {
-  width: 33%;
-  height: 136px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  width: 123px;
+  max-width: 40%;
+  min-height: 136px;
+  object-fit: cover;
+  border-radius: 20px 0px 0px 20px;
+  padding: 5px;
 }
 
 .populairesCards .cardContent {
-    height: auto;
-  width: 67%;
-  padding-left: 15px;
+  height: 100%;
+
+  width: 246px;
+  padding: 10px 5px 5px 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .cardTxt {
-}
-
-.populairesCards .card-title {
-  margin-top: 10px;
-  margin-bottom: 4px;
-}
-
-.populairesCards .card-subtitle {
-}
-
-.populairesCards .cardRating {
-  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 /****** MainThirdSection" Activités à Marseille ***********/
@@ -418,6 +445,7 @@ input[type="search"]::-webkit-search-cancel-button {
 .activityCards {
   width: 100%;
   display: flex;
+  justify-content: center;
   gap: 30px;
 }
 .activityCards a {
@@ -430,7 +458,6 @@ input[type="search"]::-webkit-search-cancel-button {
 .activityOneCard {
   width: 100%;
   height: 100%;
- 
 }
 .activityCards a:hover {
   transform: translate(0px, -4px);
@@ -445,14 +472,14 @@ input[type="search"]::-webkit-search-cancel-button {
   height: 100%;
   object-fit: cover;
   border-radius: 20px 20px 0px 0px;
+  aspect-ratio: 1/1;
 }
 .activityCardTxt {
   width: 100%;
   height: 59px;
   border-radius: 0px 0px 20px 20px;
   padding: 20px 19px;
-
-  /*gap: 10px;*/
+  align-content: center;
 }
 .activityCardTitle {
   font-size: 16px;
@@ -476,39 +503,46 @@ footer {
   gap: 15px;
 }
 /* Le code ci-dessous correspond à la version responsive uniquement */
+@media (max-width: 1150px) {
+  .hebergementsCardsContainer {
+    gap: 20px;
+  }
 
-/****** Media queries ***********/
-@media (max-width: 1300px) {
+  .hebergementsCardsContainer a {
+    flex: 1 1 calc((100% - 40px) / 3);
+  }
+}
+/* Medium devices (tablets, less/equal than 1024px) */
+@media (max-width: 1024px) {
+  .filtersContainer {
+    flex-direction: column;
+    height: 91px;
+  }
+  .filtersTitle {
+    align-self: start;
+  }
   .MainSecondSection {
     flex-direction: column;
   }
-  .hebergementsCardsRow {
-    display: flex;
-    gap: 30px;
 
-    justify-content: space-around;
-  }
-  .hebergementsCardsRow a {
-    width: auto;
-  }
   .hebergements {
     width: 100%;
   }
 
   .populaires {
     width: 100%;
-    margin-top: 50px;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   .populairesCards {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
   }
- 
 
   .populairesCards a {
-    width: 30%;
+    width: calc((100% - 60px) / 3);
   }
 
   .populairesCards .card-title {
@@ -518,55 +552,226 @@ footer {
   .populairesCards .card-subtitle {
     font-size: 13px;
   }
-}
-/* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-  .filtersContainer {
-    flex-direction: column;
-
-    height: 91px;
-  }
-  .filtersTitle {
-    align-self: start;
-  }
-
-
-
-
-
-
 
   .MainThirdSection {
-    height: 390px;
+    height: 100%;
   }
-  .activityCards{
-    height: 270px;
+  .activityCards a {
+    height: 100%;
+    width: 100%;
   }
-  .activityCards a{
-    width: 193.5px;
-    height: 270px;
+  .activityOneCard {
+    width: 100%;
+    height: 100%;
   }
-  .activityOneCard{
-    width: 193.5px;
-    height: 270px;
-  }
- 
+
   .activityCardImage {
-    width:193.5px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
   }
-  .activityCardTxt{
-    width:193.5px;
-    height: 70px;
+  .activityCardTxt {
+    padding: 10px 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
-
-
-
-
-
+  footer {
+    max-width: 924px;
+    gap: 30px;
+  }
+  .footerSection {
+    width: calc((100% - 30px) / 3);
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
 }
 
 /* Small devices (phones, less than 768px) */
+
 @media (max-width: 767.98px) {
-  /* ... */
+  header {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+  nav {
+    width: 100%;
+    justify-content: center;
+    gap: 15px;
+  }
+  main {
+    width: 100vw;
+    padding: 0px 0px;
+    display: flex;
+    flex-direction: column;
+  }
+  .MainFirstSection {
+    padding: 0px 20px;
+  }
+  .linkHeaderContainer {
+    min-width: 100vw;
+    gap: 0px;
+  }
+
+  .linkHeader {
+    width: 50%;
+    position: relative;
+    border-top: none;
+    border-bottom: 2px solid var(--main-bg-color);
+    transition: all 0.3s ease-in-out;
+    align-content: flex-start;
+  }
+
+  .linkHeader:hover {
+    border-top: none;
+    border-bottom: var(--main-color) solid 2px;
+  }
+  .linkHeader a {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .titleContainer {
+    height: 100%;
+  }
+  .searchContainer {
+    width: 100%;
+    max-width: 377px;
+  }
+  .searchButton {
+    display: none;
+  }
+  .searchButtonMobile {
+    display: flex;
+    width: 49px;
+    height: 49px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+  }
+  .filtersContainer {
+    height: 100%;
+    width: 100%;
+  }
+  .filtersButtonsContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px 10px;
+  }
+  .filterButton {
+    padding: 4px 19px;
+    font-size: 14px;
+    line-height: 16.44px;
+    width: 162.5px;
+    justify-content: flex-start;
+  }
+
+  .MainSecondSection {
+    flex-direction: column-reverse;
+    width: 100vw;
+    gap: 15px;
+  }
+  .MainSecondSection section {
+    border-radius: 0px;
+  }
+  .MainSecondSection .populaires {
+    display: flex;
+    flex-direction: column;
+    padding: 30px 20px;
+    gap: 15px;
+  }
+
+  .populairesCards {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .populairesCards a {
+    width: 100%;
+  }
+
+  .populairesCards .card-title {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18.78px;
+  }
+
+  .populairesCards .card-subtitle {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.44px;
+  }
+  .populairesCards img {
+    width: 30%;
+    min-width: 120px;
+    max-width: 40%;
+  }
+
+  .MainSecondSection .hebergements {
+    padding: 20px;
+    gap: 15px;
+    background-color: white;
+  }
+
+  .hebergementsCardsContainer {
+    gap: 15px;
+  }
+  .hebergementsCardsContainer a {
+    min-width: 250px;
+    max-width: 400px;
+  }
+
+  .activityCards {
+    gap: 15px;
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .activityCards a {
+    min-width: 240px;
+    max-width: 350px;
+    flex: 1 1 calc((100% - 30px) / 2);
+  }
+  .activityCardImage {
+    height: 200px;
+  }
+  .activityCardImage img {
+    height: 100%;
+  }
+  .activityCardTxt {
+    padding: 10px 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  footer {
+    padding: 0px;
+    gap: 0px;
+    max-width: 100%;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 547.98px) {
+  .filtersButtonsContainer {
+    justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footerSection {
+    width: 100%;
+  }
 }
